change coloumn gallery

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
+        <div class="row row-cols-lg-4 row-cols-md-3 row-cols-2">
           <div class="col mt-3">
             <a href="img/gallery/bg_affan-silva.jpg" data-toggle="lightbox" data-caption="This describes the image" data-gallery="affansilva">
               <img src="img/gallery/thumbnail/bg_affan-silva.jpg" alt="Affan & Silva 1" class="img-fluid w-100 rounded" />
